--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <!--- Basic Page Needs
    ================================================== -->
    <meta charset="utf-8">
-	<title>Ceevee - Free Responsive HTML5/CSS3 Template</title>
+	<title>Statescu Stefan Personal Website</title>
 	<meta name="description" content="">
 	<meta name="author" content="">
 
@@ -61,13 +61,11 @@
             and learn more <a class="smoothscroll" href="#about">about me</a>.</h3>
             <hr />
             <ul class="social">
-               <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-               <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+               <li><a href="https://www.facebook.com/stefan.statescu.3"><i class="fa fa-facebook"></i></a></li>
                <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-               <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-               <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-               <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-               <li><a href="#"><i class="fa fa-skype"></i></a></li>
+               <li><a href="https://www.linkedin.com/in/stefan-statescu/"><i class="fa fa-linkedin"></i></a></li>
+               <li><a href="https://www.instagram.com/stefanstatescu/"><i class="fa fa-instagram"></i></a></li>
+               <li><a href="https://web.skype.com/live:9e490b53938eb6f8"><i class="fa fa-skype"></i></a></li>
             </ul>
          </div>
       </div>
@@ -95,12 +93,7 @@
 
             <h2>About Me</h2>
 
-            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
-            eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam
-            voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione
-            voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit,
-            sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
-            Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam.
+            <p>TBD
             </p>
 
             <div class="row">
@@ -250,7 +243,7 @@
 
                   <p>
 				  My job was to develop and maintain an intern software application that focuses on managing 
-				  a client’s portfolio and recommending the best financial instrument according to his budget.
+				  a client’s financial portfolio and recommending the best instrument according to his budget.
                   </p>
 
                </div>
