--- a/index.html
+++ b/index.html
@@ -68,7 +68,21 @@
                <li><a href="https://web.skype.com/live:9e490b53938eb6f8"><i class="fa fa-skype"></i></a></li>
             </ul>
          </div>
+		<div class="row banner">	  
+			<div class="banner-text">
+				<style>
+				img {
+					border-radius: 100%;
+				}
+				</style>
+				<hr />
+					<img style="border-radius=100%" src="images/profilepic.jpeg" alt="" width="200" height="200" style="border-radius=100%" />
+			</div>
+		</div>
       </div>
+	  
+
+	  
 
       <p class="scrolldown">
          <a class="smoothscroll" href="#about"><i class="icon-down-circle"></i></a>
@@ -85,7 +99,7 @@
 
          <div class="three columns">
 
-            <img class="profile-pic"  src="images/profilepic.jpeg" alt="" />
+            <img class="profile-pic"  src="images/signature.png" alt="" />
 
          </div>
 
