--- a/index.html
+++ b/index.html
@@ -96,11 +96,11 @@
 
       <div class="row">
 
-         <div class="three columns">
+         <div class="three columns main-col">
 
             <img class="profile-pic"  src="images/signature.png" alt="" />
 
-         </div>
+         </div>	
 
          <div class="nine columns main-col">
 
@@ -548,22 +548,12 @@
    <footer>
 
       <div class="row">
-
-         <div class="twelve columns">
-
             <ul class="social-links">
-               <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-               <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+               <li><a href="https://www.facebook.com/stefan.statescu.3"><i class="fa fa-facebook"></i></a></li>
                <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-               <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-               <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-               <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-               <li><a href="#"><i class="fa fa-skype"></i></a></li>
-            </ul>
-
-            <ul class="copyright">
-               <li>&copy; Copyright 2014 CeeVee</li>
-               <li>Design by <a href="http://www.styleshout.com/" title="Styleshout" target="_blank">Styleshout</a></li>   
+               <li><a href="https://www.linkedin.com/in/stefan-statescu/"><i class="fa fa-linkedin"></i></a></li>
+               <li><a href="https://www.instagram.com/stefanstatescu/"><i class="fa fa-instagram"></i></a></li>
+               <li><a href="https://web.skype.com/live:9e490b53938eb6f8"><i class="fa fa-skype"></i></a></li>
             </ul>
 
          </div>
