--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
             <li class="current"><a class="smoothscroll" href="#home">Home</a></li>
             <li><a class="smoothscroll" href="#about">About</a></li>
 	         <li><a class="smoothscroll" href="#resume">Resume</a></li>
+			 <li><a class="smoothscroll" href="#skills">Skills</a></li>
             <li><a class="smoothscroll" href="#portfolio">Works</a></li>
             <li><a class="smoothscroll" href="#testimonials">Testimonials</a></li>
             <li><a class="smoothscroll" href="#contact">Contact</a></li>
@@ -288,7 +289,7 @@
 
       <!-- Skills
       ----------------------------------------------- -->
-      <div class="row skill">
+      <div class="row skill" id="skills">
 
          <div class="three columns header-col">
             <h1><span>Skills</span></h1>
