--- a/index.html
+++ b/index.html
@@ -72,11 +72,12 @@
 		<div class="row banner">	  
 			<div class="banner-text">
 				<style>
-				img {
+				#img1 {
 					border-radius: 100%;
+					background: transparent;
 				}
 				</style>
-					<img style="border-radius=100%" src="images/profilepic.jpeg" alt="" width="200" height="200" style="border-radius=100%" />
+					<img id="img1" src="images/profilepic.jpeg" alt="" width="200" height="200" style="border-radius=100%" />
 			</div>
 		</div>
       </div>
@@ -365,7 +366,7 @@
                   <div class="item-wrap">
 
                      <a href="#modal-02" title="">
-                        <img alt="" src="images/portfolio/NESS.jpg">
+                        <img alt="" src="images/portfolio/NESS.png">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
           					      <h5>Ness Digital Engineering</h5>
@@ -382,7 +383,11 @@
                   <div class="item-wrap">
 
                      <a href="#modal-03" title="">
-                        <img alt="" src="images/portfolio/UCS_RGB_UniCreditServices_S.jpg">
+						<style>
+						#img2{
+						border-radius}
+						</style>
+                        <img id="img2" alt="" src="images/portfolio/UCS_RGB_UniCreditServices_S.png">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
           					      <h5>Unicredit Servicies</h5>
