--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
 						#img2{
 						border-radius}
 						</style>
-                        <img id="img2" alt="" src="images/portfolio/UCS_RGB_UniCreditServices_S.png">
+                        <img id="img2" alt="" src="images/portfolio/UCS_RGB_UniCreditServices_S.jpg">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
           					      <h5>Unicredit Servicies</h5>
