--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@
                   </div>
 
                   <div>
-                     <input value="submit" type="submit" href="demo.html" class="submit"></input>
+                     <input class="submit" value="submit" type="submit" href="demo.html" ></input>
                      <span id="image-loader">
                         <img alt="" src="images/loader.gif">
                      </span>
