--- a/demo.html
+++ b/demo.html
@@ -7,7 +7,7 @@
    <!--- Basic Page Needs
    ================================================== -->
    <meta charset="utf-8">
-	<title>CeeVee - Free Responsive HTML5/CSS3 Template</title>
+	<title>Stefan Statescu Personal Website</title>
 	<meta name="description" content="">
 	<meta name="author" content="">
 
@@ -61,7 +61,7 @@
 				<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
 				<li><a href="https://www.linkedin.com/in/stefan-statescu/"><i class="fa fa-linkedin"></i></a></li>
 				<li><a href="https://www.instagram.com/stefanstatescu/"><i class="fa fa-instagram"></i></a></li>
-				<li><a href="https://web.skype.com/live:9e490b53938eb6f8"><i class="fa fa-skype"></i></a></li>
+               <li><a href="https://web.skype.com/live:9e490b53938eb6f8"><i class="fa fa-skype"></i></a></li>
             </ul>
 
          </div>
