--- a/index.html
+++ b/index.html
@@ -108,8 +108,7 @@
 
             <h2>About Me</h2>
 
-            <p>TBD
-            </p>
+            <p> TBD </p>
 
             <div class="row">
 
@@ -316,10 +315,13 @@
 						<li><span class="bar-expand soap"></span><em>SOAP</em></li>
 						<li><span class="bar-expand rest"></span><em>REST</em></li>
 						<li><span class="bar-expand maven"></span><em>MAVEN</em></li>
+                  <li><span class="bar-expand xml"></span><em>XML/JSON</em></li>
 						<li><span class="bar-expand linux"></span><em>LINUX</em></li>
 						<li><span class="bar-expand graphQl"></span><em>GRAPHQL</em></li>
 						<li><span class="bar-expand junit"></span><em>JUNIT</em></li>
-						<li><span class="bar-expand xml"></span><em>XML/JSON</em></li>
+                  <li><span class="bar-expand python"></span><em>PYTHON</em></li>
+                  <li><span class="bar-expand selenium"></span><em>SELENIUM</em></li>
+                  <li><span class="bar-expand sonar"></span><em>SELENIUM</em></li>
 						
 					</ul>
 
