About me section changed

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
             <h2>About Me</h2>
 
-            <p> TBD </p>
+            <p> Hi, my name is Stefan and I'm a passionate FullStack developer. I have worked with some powerful companies where I was able to put my knowledge into practice, where also give me the opportunity to raise my level of expertise on how the software works in a proper way. Scroll down to see my main areas of expertise.</p>
 
             <div class="row">
 
@@ -160,7 +160,7 @@
                <div class="twelve columns">
 
                   <h3>University of Computer Science <i>"Alexandru I. Cuza"</i></h3>
-                  <p class="info">Master in Computer Linguistics <span>&bull;</span> <em class="date">July 2017</em></p>
+                  <p class="info">Master in Computer Linguistics (ungraduated)<span>&bull;</span> <em class="date">July 2017</em></p>
 
                   <p>
 				  <span>Computational linguistics</span> is an interdisciplinary field concerned with the <span>computational modelling</span> of <span>natural language</span>, 
@@ -297,9 +297,6 @@
 
          <div class="nine columns main-col">
 
-            <p>TBD
-            </p>
-
 				<div class="bars">
 
 				   <ul class="skills">
@@ -321,7 +318,7 @@
 						<li><span class="bar-expand junit"></span><em>JUNIT</em></li>
                   <li><span class="bar-expand python"></span><em>PYTHON</em></li>
                   <li><span class="bar-expand selenium"></span><em>SELENIUM</em></li>
-                  <li><span class="bar-expand sonar"></span><em>SELENIUM</em></li>
+                  <li><span class="bar-expand sonar"></span><em>SONAR</em></li>
 						
 					</ul>
 
