Modified prev Job description

--- a/index.html
+++ b/index.html
@@ -240,8 +240,13 @@
                   <p class="info">FullStack Developer <span>&bull;</span> <em class="date">Aug 2019 - Present</em></p>
 
                   <p>
-				  My job is to develop and maintain a monolith software application that includes 
-				  payment and ticketing for parking and public transportation system.
+				  Built and maintained features for the Parkeon monolith software that include payments and ticketing for parking and public transport system. I implemented the client’s business requirements through GWT on the client level part, Java with Spring framework, and Hibernate on top of JDBC API for the backend part. Parkeon is a French-headquartered company specializing in payment and ticketing systems, notably for car parks and public transport systems.
+               <hr/>
+
+               <i>Technology stack/Tools:</i> Java, Spring, Hibernate, PostgreSQL, GWT, 
+               JavaScript. JUnit, SVN, Jira, Intellij, Linux
+
+
                   </p>
 
                </div>
@@ -256,8 +261,10 @@
                   <p class="info">FullStack Developer <span>&bull;</span> <em class="date">Dec 2017 - July 2019</em></p>
 
                   <p>
-				  My job was to develop and maintain an intern software application that focuses on managing 
-				  a client’s financial portfolio and recommending the best instrument according to his budget.
+				  In this role, I was responsible for building and maintaining features for the renewal of a core banking product. I implemented the client's business requirements through JSF portlets that were communicating with back­end components deployed as web services via an orchestration service that provides a Java object-based implementation of the Enterprise Integration Patterns using an application programming interface. My job was to develop and maintain a software application that focuses on managing a client’s portfolio and recommend it best financial instrument according to his budget.
+            <hr/>
+              <i>Technologies/Tools:</i> Java, EJB, JSF Icefaces, Javascript, Apache Camel, 
+               Maven, JBOSS, Websphere Application Server, DB2, Intellij
                   </p>
 
                </div>
@@ -272,9 +279,7 @@
                   <p class="info">Web developer & Program Coordinator<span>&bull;</span> <em class="date">Nov 2015 - Jan 2017</em></p>
 
                   <p>
-				  As a Web developer and Program coordinator at WorkProfiler, my job was to define objectives by analyzing user requirements 
-				  and also adapt to file system possibilities. As a Program Coordinator, my job was to support clients’ needs by developing 
-				  specific documentation and providing necessary information.
+				  In this role, I was concerned with defining objectives by analyzing user requirements and also adapt to system possibilities. As a Web developer, my job was to maintain and update a WordPress website written in PHP and group entities in the database for time-limited events.
                   </p>
 
                </div>
@@ -347,7 +352,7 @@
           	   <div class="columns portfolio-item">
                   <div class="item-wrap">
 
-                     <a href="#modal-02" title="">
+                     <a href="#ness" title="">
                         <img alt="" src="images/portfolio/NESS.png">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
@@ -357,7 +362,9 @@
                         </div>
                         <div class="link-icon"><i class="icon-plus"></i></div>
                      </a>
-
+                  </div>
+                  <div id="ness">
+                     <a href="https://www.ness.com/">
                   </div>
           		</div> <!-- item end -->
 				
